--- a/market_accesories.html
+++ b/market_accesories.html
@@ -31,7 +31,7 @@
 	<link rel="icon" type="image/vnd.microsoft.icon" href="media/img/favicon.png">
 
 	<!--Fonts-->
-	<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans" rel="stylesheet">
 
 	<title> Market | Accesories </title>
 </head>
@@ -140,7 +140,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar"  type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -152,8 +153,8 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=9G_Ec1Y_M8A" target="_blank">
-										<img class="card-img-top" loading="lazy" src="media/img/teclados/duckymecha2.png"
-											alt="Ducky Mecha 2">
+										<img class="card-img-top" loading="lazy"
+											src="media/img/teclados/duckymecha2.png" alt="Ducky Mecha 2">
 									</a>
 								</div>
 								<div class="card-body">
@@ -176,7 +177,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar"  type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -212,7 +214,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar"  type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -226,8 +229,8 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=VwW0B1rd9xk" target="_blank">
-										<img class="card-img-top" loading="lazy" src="media/img/teclados/frozenllama.jpg	"
-											alt="Frozen Llama">
+										<img class="card-img-top" loading="lazy"
+											src="media/img/teclados/frozenllama.jpg	" alt="Frozen Llama">
 									</a>
 
 								</div>
@@ -251,7 +254,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar"  type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -287,7 +291,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -300,7 +305,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=9tGRHYr_Q3o" target="_blank">
-										<img class="card-img-top" loading="lazy"  src="media/img/teclados/kbparadise.jpg"
+										<img class="card-img-top" loading="lazy" src="media/img/teclados/kbparadise.jpg"
 											alt="KBParadise V60">
 									</a>
 
@@ -325,7 +330,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar"  type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -343,7 +349,8 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=8dmCa5KvjOw" target="_blank">
-										<img class="card-img-top" loading="lazy" src="media/img/mouses/g203.png" alt="Logitecg G203">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g203.png"
+											alt="Logitecg G203">
 									</a>
 
 								</div>
@@ -367,7 +374,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -379,7 +387,8 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=l5YPwXuIxi4&t" target="_blank">
-										<img class="card-img-top" loading="lazy" src="media/img/mouses/g403.png" alt="Logitecg G403">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g403.png"
+											alt="Logitecg G403">
 									</a>
 
 								</div>
@@ -403,7 +412,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -415,7 +425,8 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=JHqYAC4X4cA" target="_blank">
-										<img class="card-img-top" loading="lazy" src="media/img/mouses/g502.png" alt="Logitecg G502">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g502.png"
+											alt="Logitecg G502">
 									</a>
 
 								</div>
@@ -439,7 +450,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -453,7 +465,8 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=L-tDU524z1o" target="_blank">
-										<img class="card-img-top" loading="lazy" src="media/img/mouses/g604.png" alt="G604">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g604.png"
+											alt="G604">
 									</a>
 								</div>
 								<div class="card-body">
@@ -476,7 +489,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -488,7 +502,8 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=InX6le8s0kI" target="_blank">
-										<img class="card-img-top" loading="lazy" src="media/img/mouses/g703.png" alt="G703">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g703.png"
+											alt="G703">
 									</a>
 
 								</div>
@@ -512,7 +527,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -523,8 +539,9 @@
 						<div class="col-md-4">
 							<div class="card shadow">
 								<div class="inner">
-									<a href="" target="_blank"> 
-										<img class="card-img-top" loading="lazy" src="media/img/mouses/g903.png" alt="G903">
+									<a href="" target="_blank">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g903.png"
+											alt="G903">
 									</a>
 
 								</div>
@@ -548,7 +565,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -563,7 +581,7 @@
 						<div class="col-md-4">
 							<div class="card shadow">
 								<div class="inner">
-									<a href="" target="_blank"> 
+									<a href="" target="_blank">
 										<img class="card-img-top" loading="lazy" src="media/img/audifonos/b3500.jpg"
 											alt="Red Lemon B3500">
 									</a>
@@ -590,7 +608,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -628,7 +647,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -666,7 +686,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -706,7 +727,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -718,8 +740,8 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="" target="_blank">
-										<img class="card-img-top" loading="lazy" src="media/img/audifonos/redlemonblue.jpg"
-											alt="Red Lemon bluetooth">
+										<img class="card-img-top" loading="lazy"
+											src="media/img/audifonos/redlemonblue.jpg" alt="Red Lemon bluetooth">
 									</a>
 
 								</div>
@@ -744,7 +766,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
@@ -782,7 +805,8 @@
 											</div>
 											<input class="input-group-addon" type="number" min="0" max="30">
 											<div class="input-group-append">
-												<button class="btn btn-outline-danger" name="agregar"  type="submit">Añadir al
+												<button class="btn btn-outline-danger" name="agregar"
+													type="submit">Añadir al
 													carrito</button>
 											</div>
 										</div>
