--- a/market_consoles.html
+++ b/market_consoles.html
@@ -31,7 +31,7 @@
 	<link rel="icon" type="image/vnd.microsoft.icon" href="media/img/favicon.png">
 
 	<!--Fonts-->
-	<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans" rel="stylesheet">
 
 	<title> Market | Consoles </title>
 </head>
@@ -112,7 +112,8 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://www.youtube.com/watch?v=0tUqIHwHDEc" target="_blank">
-							<img class="card-img-top" src="media/img/consolas/xbox.jpeg"  loading="lazy" alt="Xbox Series X">
+							<img class="card-img-top" src="media/img/consolas/xbox.jpeg" loading="lazy"
+								alt="Xbox Series X">
 						</a>
 					</div>
 					<div class="card-body">
@@ -126,7 +127,7 @@
 								</div>
 								<input class="input-group-addon" type="number" value="1" min="0" max="30">
 								<div class="input-group-append">
-									<button class="btn btn-outline-danger" name="agregar"  type="submit">Añadir al
+									<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
 										carrito</button>
 								</div>
 							</div>
@@ -149,7 +150,8 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://www.youtube.com/watch?v=RkC0l4iekYo" target="_blank">
-							<img class="card-img-top" src="media/img/consolas/ps5.jpg" loading="lazy" alt="Play Station 5">
+							<img class="card-img-top" src="media/img/consolas/ps5.jpg" loading="lazy"
+								alt="Play Station 5">
 						</a>
 					</div>
 					<div class="card-body">
@@ -186,7 +188,8 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://www.youtube.com/watch?v=f5uik5fgIaI" target="_blank">
-							<img class="card-img-top" src="media/img/consolas/nswitch.jpg" loading="lazy" alt="Nintendo Switch">
+							<img class="card-img-top" src="media/img/consolas/nswitch.jpg" loading="lazy"
+								alt="Nintendo Switch">
 						</a>
 					</div>
 					<div class="card-body">
