--- a/market_pcgaming.html
+++ b/market_pcgaming.html
@@ -31,7 +31,7 @@
 	<link rel="icon" type="image/vnd.microsoft.icon" href="media/img/favicon.png">
 
 	<!--Fonts-->
-	<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans" rel="stylesheet">
 
 	<title> Market | PC </title>
 </head>
@@ -113,7 +113,8 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://spartangeek.com/pc/delios-60i" target="_blank">
-							<img class="card-img-top" src="media/img/pc/delios60i.png" loading="lazy" alt="PC Delios 60i">
+							<img class="card-img-top" src="media/img/pc/delios60i.png" loading="lazy"
+								alt="PC Delios 60i">
 						</a>
 					</div>
 					<div class="card-body">
@@ -158,7 +159,8 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://spartangeek.com/pc/delios-70i" target="_blank">
-							<img class="card-img-top" src="media/img/pc/delios70i.png" loading="lazy" alt="PC Delios 70i">
+							<img class="card-img-top" src="media/img/pc/delios70i.png" loading="lazy"
+								alt="PC Delios 70i">
 						</a>
 					</div>
 					<div class="card-body">
@@ -201,7 +203,8 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://spartangeek.com/pc/thanos-2080i" target="_blank">
-							<img class="card-img-top" src="media/img/pc/thanos.png" loading="lazy" alt="Pc gamer Thanos">
+							<img class="card-img-top" src="media/img/pc/thanos.png" loading="lazy"
+								alt="Pc gamer Thanos">
 						</a>
 					</div>
 					<div class="card-body">
@@ -213,7 +216,8 @@
 								</div>
 								<input hidden name="name" type="text" value="Thanos 2080i">
 								<input hidden name="price" type="number" value="3500">
-								<input class="input-group-addon" type="number" value="1" min="0" max="30" name="quantity">
+								<input class="input-group-addon" type="number" value="1" min="0" max="30"
+									name="quantity">
 								<div class="input-group-append">
 									<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
 										carrito</button>
