removing cart function

--- a/market_accesories.html
+++ b/market_accesories.html
@@ -130,7 +130,7 @@
 										</div>
 									</div>
 									<p class="card-text">RGB LED 60% Double Shot PBT Mechanical Keyboard</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="Ducky One">
 										<input hidden name="price" type="number" value="99">
 										<div class="input-group mb-3">
@@ -167,7 +167,7 @@
 										</div>
 									</div>
 									<p class="card-text">RGB LED 60% Double Shot PBT Mechanical Keyboard</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="DuckyMecha">
 										<input hidden name="price" type="number" value="99">
 										<div class="input-group mb-3">
@@ -204,7 +204,7 @@
 										</div>
 									</div>
 									<p class="card-text">PD Double Shot PBT Mechanical Keyboard</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="Leopold">
 										<input hidden name="price" type="number" value="119">
 										<div class="input-group mb-3">
@@ -244,7 +244,7 @@
 										</div>
 									</div>
 									<p class="card-text">RGB LED 60% Double Shot PBT Mechanical Keyboard</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="FrozenLlama">
 										<input hidden name="price" type="number" value="129">
 										<div class="input-group mb-3">
@@ -281,7 +281,7 @@
 										</div>
 									</div>
 									<p class="card-text">RGB LED TKL Dye Sub PBT Mechanical Keyboard</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="Vortex">
 										<input hidden name="price" type="number" value="159">
 										<div class="input-group mb-3">
@@ -320,7 +320,7 @@
 										</div>
 									</div>
 									<p class="card-text">Vintage 60% Mechanical Keyboard</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="KBParadise">
 										<input hidden name="price" type="number" value="95">
 										<div class="input-group mb-3">
@@ -364,7 +364,7 @@
 										</div>
 									</div>
 									<p class="card-text">Mouse gaming LIGHTSYNC</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="g203">
 										<input hidden name="price" type="number" value="25">
 										<div class="input-group mb-3">
@@ -402,7 +402,7 @@
 										</div>
 									</div>
 									<p class="card-text">Mouse gaming HERO</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="Leopold">
 										<input hidden name="price" type="number" value="119">
 										<div class="input-group mb-3">
@@ -440,7 +440,7 @@
 										</div>
 									</div>
 									<p class="card-text">Mouse gaming inalambrico LIGHTSPEED</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="g502">
 										<input hidden name="price" type="number" value="140">
 										<div class="input-group mb-3">
@@ -479,7 +479,7 @@
 										</div>
 									</div>
 									<p class="card-text">Mouse gaming inalambrico LIGHTSPEED</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="g604">
 										<input hidden name="price" type="number" value="110">
 										<div class="input-group mb-3">
@@ -517,7 +517,7 @@
 										</div>
 									</div>
 									<p class="card-text">Mouse gaming inalambrico LIGHTSPEED HERO</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="g703">
 										<input hidden name="price" type="number" value="110">
 										<div class="input-group mb-3">
@@ -555,7 +555,7 @@
 										</div>
 									</div>
 									<p class="card-text">Mouse gaming inalambrico LIGHTSPEED HERO</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="g903">
 										<input hidden name="price" type="number" value="175">
 										<div class="input-group mb-3">
@@ -598,7 +598,7 @@
 									</div>
 									<p class="card-text">Audífonos Bluetooth Gamer Inalámbricos Plegables con Micrófono,
 										Sonido Estéreo HD</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="b3500">
 										<input hidden name="price" type="number" value="80">
 										<div class="input-group mb-3">
@@ -637,7 +637,7 @@
 									</div>
 									<p class="card-text">Audífonos Gamer Sonido High Definition con Micrófono, Control
 										de Volumen y Luz LED, AUX 3.5mm</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="g6000">
 										<input hidden name="price" type="number" value="75">
 										<div class="input-group mb-3">
@@ -676,7 +676,7 @@
 									</div>
 									<p class="card-text">Audífonos Gamer Sonido HD Estéreo 360°, Micrófono de
 										Cancelación de Ruido y Luz LED</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="g9000">
 										<input hidden name="price" type="number" value="80">
 										<div class="input-group mb-3">
@@ -717,7 +717,7 @@
 									</div>
 									<p class="card-text">Audífonos tipo Diadema Over-Ear Plegables Sonido High
 										Definition, Manos Libres, Cable Auxiliar 3.5mm</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="RL">
 										<input hidden name="price" type="number" value="40">
 										<div class="input-group mb-3">
@@ -756,7 +756,7 @@
 									</div>
 									<p class="card-text">Audífonos Bluetooth Inalámbricos HD tipo Diadema, Manos Libres,
 										Batería de Larga Duración, Aux 3.5mm</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="RL Bluetooth">
 										<input hidden name="price" type="number" value="50">
 										<div class="input-group mb-3">
@@ -795,7 +795,7 @@
 									</div>
 									<p class="card-text">Audífonos Bluetooth Inalámbricos HD, Plegables Tipo Diadema,
 										Manos Libres, Batería Recargable</p>
-									<form action="crud/control.php" method="post">
+									<form action="" method="post">
 										<input hidden name="name" type="text" value="w1000">
 										<input hidden name="price" type="number" value="60">
 										<div class="input-group mb-3">
