--- a/market_consoles.html
+++ b/market_consoles.html
@@ -118,7 +118,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$499.99</h1>
-						<form action="crud/control.php" method="post">
+						<form action="" method="post">
 							<input hidden name="name" type="text" value="xbox">
 							<input hidden name="price" type="number" value="499.99">
 							<div class="input-group">
@@ -156,7 +156,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$499</h1>
-						<form action="crud/control.php" method="post">
+						<form action="" method="post">
 							<input hidden name="name" type="text" value="play">
 							<input hidden name="price" type="number" value="499.99">
 							<div class="input-group">
@@ -194,7 +194,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$499</h1>
-						<form action="crud/control.php" method="post">
+						<form action="" method="post">
 							<input hidden name="name" type="text" value="switch">
 							<input hidden name="price" type="number" value="499.99">
 							<div class="input-group">
