--- a/market_pcgaming.html
+++ b/market_pcgaming.html
@@ -119,7 +119,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$1,500</h1>
-						<form action="crud/control.php" method="post">
+						<form action="" method="post">
 							<div class="input-group">
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
@@ -165,7 +165,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$1,800</h1>
-						<form action="crud/control.php" method="post">
+						<form action="" method="post">
 							<div class="input-group">
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
@@ -209,7 +209,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$3,500</h1>
-						<form action="crud/control.php" method="post">
+						<form action="" method="post">
 							<div class="input-group">
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
